--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "tcg/voyager": "^0.11.12"
+        "nao-pon/flysystem-google-drive": "~1.1",
+        "tcg/voyager": "^0.11.12",
+        "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
