--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "google/apiclient": "^2.1",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "~2.1.0",
         "nao-pon/flysystem-google-drive": "~1.1",
-        "tcg/voyager": "^0.11.12",
-        "maatwebsite/excel": "~2.1.0"
+        "tcg/voyager": "^0.11.12"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
